cmake_minimum_required(VERSION 3.14)
project(Chapter6_8)

set(CMAKE_CXX_STANDARD 14)

#add_executable(Chapter6_8 )
add_executable(Problem06_0a Problem06_0a.cpp)
add_executable(calculator00 calculator00.cpp)
add_executable(calculator02buggy calculator02buggy.cpp)
add_executable(Calculator02 Calc02_Test.cpp)
add_executable(Problem06_03 Problem06_03.cpp)
add_executable(Problem06_04 Problem06_04.cpp)
add_executable(Problem06_08 Problem06_08.cpp)